ex1.13/project_v07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: persisted-volume
          persistentVolumeClaim:
            claimName: persisted-claim
      containers:
        - name: backend
          imagePullPolicy: Always
          volumeMounts:
            - name: persisted-volume
              mountPath: /usr/src/app/cache
          image: maxmynter/devopsk8s-backend@sha256:ede38c90011818cdd25759e9a26651ab838fc580e377a6b0db5f6783903c0904
        - name: frontend
          image: maxmynter/devopsk8s-frontend@sha256:7eab560b19610328323132da0980ea055e3b35387d5b8e67d69a6e405c57a2e5
          ports:
            - containerPort: 80
