ex1.13/project_v07/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api-ingress
spec:
  rules:
    - http:
        paths:
        - path: /image
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 1234
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 2345
